--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: '14'
 
-      - name: 'Install depedendencies'
+      - name: 'Install depedendencies without building'
         run: npm ci --ignore-scripts
 
       - name: 'Lint'
@@ -50,13 +50,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install libudev-dev
 
-      - name: 'Install Node.js dependencies'
+      - name: 'Install dependencies and build from source'
         run: npm ci --build-from-source
 
-      - name: 'Build binaries'
+      - name: 'Build binaries for all ABIs'
         run: npm run prebuild
 
-      - name: 'Upload artifacts'
+      - name: 'Upload prebuilt binaries'
         uses: actions/upload-artifact@v2
         with:
           name: prebuilds-${{ matrix.os }}-${{ matrix.arch }}
@@ -77,14 +77,20 @@ jobs:
         with:
           node-version: '14'
 
-      - name: 'Install depedendencies'
+      - name: 'Install depedendencies without building'
         run: npm ci --ignore-scripts
 
-      - name: 'Download prebuilt artifacts'
+      - name: 'Download prebuilt binaries'
         uses: actions/download-artifact@v2
         with:
           path: prebuilds
 
-      - name: 'Upload build artifacts to release'
+      # TODO
+      # - name: 'Publish to npm'
+      #   run: npm publish
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: 'Upload prebuilt artifacts to GitHub release'
         if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        run: npm run prebuild-upload -- -u "${{ secrets.GITHUB_TOKEN }}"
+        run: npm run prebuild-upload -- ${{ secrets.GITHUB_TOKEN }}
