--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mcous/usb-detection",
+  "name": "usb-detection",
   "version": "4.11.0",
   "description": "Listen to USB devices and detect changes on them.",
   "main": "index.js",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mcous/node-usb-detection.git"
+    "url": "git://github.com/MadLittleMods/node-usb-detection.git"
   },
   "keywords": [
     "usb",
