--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,17 @@ jobs:
       matrix:
         os: [Ubuntu, Windows, macOS]
         arch: [x64]
+        node: ['12', '14', '16']
         include:
           - os: Windows
             arch: x86
+            node: '12'
+          - os: Windows
+            arch: x86
+            node: '14'
+          - os: Windows
+            arch: x86
+            node: '16'
 
     steps:
       - name: 'Checkout repository'
@@ -58,18 +66,22 @@ jobs:
       - name: 'Test'
         run: echo "Skipping tests on CI, as they currently require manual interaction."
 
-      - name: 'Build binaries for all ABIs'
+      # Prebuilds should only be generated once per OS + arch
+      # Running from Node LTS will generate prebuilds for all ABIs
+      - name: 'Prebuild binaries for all ABIs'
+        if: ${{ matrix.node == '14' }}
         run: npm run prebuild
 
       - name: 'Upload prebuilt binaries'
+        if: ${{ matrix.node == '14' }}
         uses: actions/upload-artifact@v2
         with:
           name: prebuilds-${{ matrix.os }}-${{ matrix.arch }}
           path: prebuilds
 
   publish:
-    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     name: 'Publish release'
+    if: ${{ startsWith(github.ref, 'refs/tags/v') }}
     needs: [check, build]
     runs-on: ubuntu-latest
 
